[package]
name = "vulkan_samples"
version = "0.1.0"
authors = ["twillett <twillett@qti.qualcomm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
vulkano = "0.19"
vulkano-shaders = "0.19.0"
vulkano-win = "0.19.0"
log = "0.4.11"
# not working from crate io package so grab directly from github for now
#image = { git = "https://github.com/image-rs/image" }

[target.'cfg(not(target_os = "android"))'.dependencies]
log4rs = "0.13.0"

[target.'cfg(target_os = "android")'.dependencies]
# @TODO - switch to stable ndk-glue crate
#ndk-glue = "0.1.0" #does not seem to work
# so just grab latest from github for now
ndk-glue = { git = "https://github.com/rust-windowing/android-ndk-rs" }
android_logger = "0.9.0"

[lib]
crate-type = ["lib", "cdylib"]

[[example]]
name = "simple_triangle"
